Fooling around for now.

--- a/dada/DADA/Template/templates/add_screen.tmpl
+++ b/dada/DADA/Template/templates/add_screen.tmpl
@@ -51,7 +51,7 @@
 		 <a href="#" onclick="toggleDisplay('add_one');return false;">
 		+/- 
 	</a>
-		Add Just One Subscriber
+		Add/Invite Just One Subscriber
 	</legend>
 <div id ="add_one" style="display:none"> 
 	
@@ -96,7 +96,7 @@
 </fieldset> 
 
 <fieldset style="background:#e6e6e6">
-	<legend>Add a Bunch of Subscribers</legend>
+	<legend>Add/Invite a Bunch of Subscribers</legend>
 
     <p>
       <label for="new_emails">
