Slightly changed the verbiage of... stuff.

--- a/dada/DADA/Template/templates/profile_home.tmpl
+++ b/dada/DADA/Template/templates/profile_home.tmpl
@@ -215,8 +215,9 @@ Your Mailing List Subscriptions
 				<p>Discussion List</p> 
 				<ul> 
 					<li> 
-						 <a href="mailto:<!-- tmpl_var list_settings.discussion_pop_email -->">
-							Start a New Thread - 
+						 
+							Start a new thread, email: 
+							<a href="mailto:<!-- tmpl_var list_settings.discussion_pop_email -->">	
 								<!-- tmpl_var list_settings.discussion_pop_email -->
 							</a>
 					</li> 
