--- a/dada/DADA/Template/templates/view_list_screen.tmpl
+++ b/dada/DADA/Template/templates/view_list_screen.tmpl
@@ -142,9 +142,17 @@
     </strong>
     <!-- tmpl_unless list_type_isa_sub_request_list -->
 		<a href="<!-- tmpl_var S_PROGRAM_URL -->?f=add&amp;type=<!-- tmpl_var type -->">
-     		add...
+     			<!-- tmpl_if list_type_isa_list -->
+					Invite
+					<!-- tmpl_if list_settings.enable_mass_subscribe -->
+			/ Add
+					<!-- /tmpl_if -->
+				<!-- tmpl_else --> 
+					Add
+				<!-- /tmpl_if -->
     	</a>
-   	<!-- /tmpl_unless --> 
+   	<!-- /tmpl_unless -->
+	...
 	</p>
   </td>
  </tr>
