--- a/dada/DADA/Template/templates/add_screen.tmpl
+++ b/dada/DADA/Template/templates/add_screen.tmpl
@@ -9,11 +9,27 @@
 <p>
  Manage Subscribers (<!-- tmpl_var type_title -->)
 &#187;
- <strong>Add</strong>
+ <strong>
+	<!-- tmpl_if list_type_isa_list -->
+		Invite
+		<!-- tmpl_if list_settings.enable_mass_subscribe -->
+/ Add
+		<!-- /tmpl_if -->
+	<!-- tmpl_else --> 
+		Add
+	<!-- /tmpl_if --> 
+	</strong>
 &#187;
  Verify
 &#187;
- Subscribe/Invite
+<!-- tmpl_if list_type_isa_list -->
+	Send Invitation
+	<!-- tmpl_if list_settings.enable_mass_subscribe -->
+		/ Subscribe
+	<!-- /tmpl_if -->
+<!-- tmpl_else --> 
+	Subscribe
+<!-- /tmpl_if -->
 </p>
 
 <!-- tmpl_if list_type_isa_list -->
@@ -51,7 +67,16 @@
 		 <a href="#" onclick="toggleDisplay('add_one');return false;">
 		+/- 
 	</a>
-		Add/Invite Just One Subscriber
+	<!-- tmpl_if list_type_isa_list -->
+		Invite
+		<!-- tmpl_if list_settings.enable_mass_subscribe -->
+			/ Add
+		<!-- /tmpl_if -->
+	<!-- tmpl_else --> 
+		Add
+	<!-- /tmpl_if -->
+	
+	 Just One Subscriber
 	</legend>
 <div id ="add_one" style="display:none"> 
 	
@@ -96,7 +121,18 @@
 </fieldset> 
 
 <fieldset style="background:#e6e6e6">
-	<legend>Add/Invite a Bunch of Subscribers</legend>
+	<legend>
+		
+		<!-- tmpl_if list_type_isa_list -->
+			Invite
+			<!-- tmpl_if list_settings.enable_mass_subscribe -->
+				/ Add
+			<!-- /tmpl_if -->
+		<!-- tmpl_else --> 
+			Add
+		<!-- /tmpl_if -->
+		
+		 a Bunch of Subscribers</legend>
 
     <p>
       <label for="new_emails">
