Closed Loop Opt-In for subscriptions is now *enforced* by default. Although this enforcement can be disabled, it is a global config. Not quite sure I'm done with this.
I've also renamed the list setting, "no_confirm_email" to, "enable_closed_loop_opt_in" - without looking, can you guess now, what it does?

--- a/dada/DADA/Template/templates/edit_type_screen.tmpl
+++ b/dada/DADA/Template/templates/edit_type_screen.tmpl
@@ -120,7 +120,7 @@
 		Make sure to place the, <code>&lt;!-- tmpl_var list_confirm_subscribe_link --&gt;</code> tag in the body of this email message!
 	</p>
 	
-	<!-- tmpl_if list_settings.no_confirm_email --> 
+	<!-- tmpl_if list_settings.enable_closed_loop_opt_in --> 
 		<p class="positive">Closed-Loop Opt-In is Enabled.</p>
 	<!-- tmpl_else --> 
 		<p class="error">Closed-Loop Opt-In is Disabled.</p>
