--- a/dada/DADA/Template/templates/list_options_screen.tmpl
+++ b/dada/DADA/Template/templates/list_options_screen.tmpl
@@ -137,23 +137,28 @@
  
   
 
+<!-- tmpl_if ENFORCE_CLOSED_LOOP_OPT_IN -->
+
+<!-- tmpl_else --> 
+
+	<tr>
+	 <td>
+	  <input type="checkbox" name="skip_sub_confirm_if_logged_in" id="skip_sub_confirm_if_logged_in" value="1" <!-- tmpl_if list_settings.skip_sub_confirm_if_logged_in -->checked="checked"<!--/tmpl_if--> />
+	 </td>
+	 <td width="99%">
+	  <p>
+	   <label for="skip_sub_confirm_if_logged_in">
+	    Skip Subscription Confirmation Process if the subscriber already has a <!-- tmpl_var PROGRAM_NAME --> profile.
+	   </label>
+	   <br /> 
 	
-<tr>
- <td>
-  <input type="checkbox" name="skip_sub_confirm_if_logged_in" id="skip_sub_confirm_if_logged_in" value="1" <!-- tmpl_if list_settings.skip_sub_confirm_if_logged_in -->checked="checked"<!--/tmpl_if--> />
- </td>
- <td width="99%">
-  <p>
-   <label for="skip_sub_confirm_if_logged_in">
-    Skip Subscription Confirmation Process if the subscriber already has a <!-- tmpl_var PROGRAM_NAME --> profile.
-   </label>
-   <br /> 
-	
-	A user that already has a profile may already have a confirmed email address. 
-	The user will still need to be logged in when making the subscription request. 
-  </p>
- </td>
-</tr>
+		A user that already has a profile may already have a confirmed email address. 
+		The user will still need to be logged in when making the subscription request. 
+	  </p>
+	 </td>
+	</tr>
+
+<!-- /tmpl_if --> 
 
 
 <tr>
