--- a/dada/DADA/Template/templates/list_invite_screen.tmpl
+++ b/dada/DADA/Template/templates/list_invite_screen.tmpl
@@ -1,5 +1,8 @@
 <!-- begin list_invite_screen.tmpl -->
 
+<!-- tmpl_include help_link_widget.tmpl --> 
+
+
 <!-- tmpl_include mass_mailing_limit_notice_widget.tmpl --> 
 
 <form name="send_email" action="<!-- tmpl_var name="S_PROGRAM_URL" -->" method="post">
@@ -36,7 +39,7 @@
 
 <fieldset> 
  <legend>
-	Your Invites
+	Your Invitees
  </legend>
 
 
@@ -168,15 +171,4 @@
 
 
 </form> 
-
-<!-- tmpl_if SHOW_HELP_LINKS -->
-	
-	<div id="help_link">
-	 <a href="<!-- tmpl_var HELP_LINKS_URL -->/list_invite.html" target="_blank">
-	  [?] Send a List Invitation
-	 </a>
-	</div>
-	
-<!--/tmpl_if-->
-
 <!-- end list_invite_screen.tmpl -->
