--- a/dada/DADA/Template/templates/example_dada_config.tmpl
+++ b/dada/DADA/Template/templates/example_dada_config.tmpl
@@ -255,7 +255,7 @@ $ADMIN_MENU = [
 					 -Activated  => 1,
 					},
 
-					{-Title      => 'Add',
+					{-Title      => 'Invite<!-- tmpl_var LT_CHAR -->!-- tmpl_if list_settings.enable_mass_subscribe --<!-- tmpl_var GT_CHAR -->/Add<!-- tmpl_var LT_CHAR -->!-- /tmpl_if --<!-- tmpl_var GT_CHAR -->',
 					 -Title_URL  => "$S_PROGRAM_URL?f=add",
 					 -Function   => 'add',
 					 -Activated  => 1,
