Made a note that MX lookups aren't done in the list control panel

--- a/dada/DADA/Template/templates/list_options_screen.tmpl
+++ b/dada/DADA/Template/templates/list_options_screen.tmpl
@@ -73,8 +73,9 @@
       Look Up Hostnames When Validating Email Addresses (MX Lookup)
      </label>
      <br />
-     When an email address is submitted to be validated, the 
-     domain of the address will be checked for its existence.
+     When a request to subscribe is submitted by an individual the 
+     domain of the address will be checked for its existence. (Add/Invitations 
+	in the list control panel currently do not use MX Lookups.)
     </p>
 <!-- tmpl_unless can_use_mx_lookup -->
 	    <p class="error">
