Slight change in verbiage in this template

--- a/dada/DADA/Template/templates/list_cp_options.tmpl
+++ b/dada/DADA/Template/templates/list_cp_options.tmpl
@@ -100,7 +100,7 @@
 			<td>
 				<p>
 					<label for="enable_mass_subscribe">
-						Enable, "Subscribe Checked Subscribers" button in the, <em>Manage Subscribers -&gt; Add -&gt; Verify</em> screen
+						Enable, "Subscribe Checked Subscribers" button in the, <em>Manage Subscribers -&gt; Invite/Add -&gt; Verify</em> screen
 					</label><br /> 
 					When enabled, this will allow you to add subscribers, via the List Control Panel without any email confirmation. </p> 
 				
