Updated the, "Don't Spam" stuff.

--- a/dada/DADA/Template/templates/manage_script_screen.tmpl
+++ b/dada/DADA/Template/templates/manage_script_screen.tmpl
@@ -202,19 +202,60 @@
 </p>
 <hr />
 
+
+
 <h2>
- Dada Mail and Spam
+	Dada Mail and Spam
 </h2>
+
+<p>To avoid sending out unsolicited bulk messages using Dada Mail, make sure to never
+	add unverified, unconfirmed addresses to any Dada Mail mailing list. 
+	
+	Always allow your  subscriber to confirm their own subscription to any Dada Mail mailing list. 
+	<a href="http://dadamailproject.com/installation/using_dada_mail.html" target="_blank">Justin follow the Closed-Loop Opt in System.</a>
+	and you'll be a super star.</p>
+</p> 
+
+
 <p>
- Do not use Dada Mail for spam. Don't even eat Spam. Really, it's disgusting. 
- We're ramen-eatin' folks. Seriously though, please read our stance on spam:
+	<em>This below verbatim from the Spamhaus project's, "<a href="http://www.spamhaus.org/definition.html" target="_blank">The Definition of Spam</a>"</em>
+</p>
+<h3>
+	The Definition of Spam
+</h3>
+<p>
+	<strong>The word "Spam" as applied to Email means "Unsolicited Bulk Email".</strong>
 </p>
 <p>
- <strong>
-  <a href="http://dadamailproject.com/project/spam.html" target="_blank">
-   http://dadamailproject.com/project/spam.html
-  </a>
- </strong>
+	Unsolicited means that the Recipient has not granted verifiable permission for the message to be sent. Bulk means that the message is sent as part of a larger collection of messages, all having substantively identical content.
 </p>
+<p>
+	<strong>A message is Spam only if it is both Unsolicited and Bulk</strong>.
+</p>
+<ul>
+	<li>
+		<p>
+			Unsolicited Email is normal email<br>
+			(examples: first contact enquiries, job enquiries, sales enquiries)
+		</p>
+	</li>
+	<li>
+		<p>
+			Bulk Email is normal email<br>
+			(examples: subscriber newsletters, customer communications, discussion lists)
+		</p>
+	</li>
+</ul>
+<h3>
+	Technical Definition of Spam
+</h3>
+<p>
+	An electronic message is "spam"if (A) the recipient's personal identity and context are irrelevant because the message is equally applicable to many other potential recipients; AND (B) the recipient has not verifiably granted deliberate, explicit, and still-revocable permission for it to be sent.
+</p>
+
+
+
+
+
 
 <!-- end manage_script_screen.tmpl -->
