Fixed a small HTML formatting problem.

--- a/dada/DADA/Template/templates/manage_script_screen.tmpl
+++ b/dada/DADA/Template/templates/manage_script_screen.tmpl
@@ -209,13 +209,11 @@
 </h2>
 
 <p>To avoid sending out unsolicited bulk messages using Dada Mail, make sure to never
-	add unverified, unconfirmed addresses to any Dada Mail mailing list. 
-	
-	Always allow your  subscriber to confirm their own subscription to any Dada Mail mailing list. 
+	add unverified, unconfirmed addresses to any Dada Mail mailing list.
+   Always allow your  subscriber to confirm their own subscription to any Dada Mail mailing list. 
 	<a href="http://dadamailproject.com/installation/using_dada_mail.html" target="_blank">Justin follow the Closed-Loop Opt in System.</a>
-	and you'll be a super star.</p>
-</p> 
-
+	and you'll be a super star.
+</p>
 
 <p>
 	<em>This below verbatim from the Spamhaus project's, "<a href="http://www.spamhaus.org/definition.html" target="_blank">The Definition of Spam</a>"</em>
