s/Add/Invite\/Add/

--- a/dada/DADA/Template/templates/list_cp_options.tmpl
+++ b/dada/DADA/Template/templates/list_cp_options.tmpl
@@ -87,7 +87,7 @@
 <!-- tmpl_else --> 
 	<fieldset> 
 	<legend>
-	Manage Subscribers: Add Screen
+	Manage Subscribers: Invite/Add Screen
 	</legend> 
 
 	<table cellpadding="5" border="0"> 
